--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <main class="personagens">
         <div class="personagem">
@@ -21,7 +23,9 @@
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Tony Chopper</h2>
-                <p class="descricao">Esta pequena rena ganhou a habilidade de mudar sua forma e de pensar como humanos após comer a fruta Hito Hito no Mi. Chopper é um valioso membro da tripulação dos Piratas do Chapéu de Palha, atuando como médico da tripulação.</p>
+                <p class="descricao">Esta pequena rena ganhou a habilidade de mudar sua forma e de pensar como humanos
+                    após comer a fruta Hito Hito no Mi. Chopper é um valioso membro da tripulação dos Piratas do Chapéu
+                    de Palha, atuando como médico da tripulação.</p>
             </div>
         </div>
 
@@ -30,7 +34,8 @@
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Roronoa Zoro</h2>
-                <p class="descricao">Primeiro pirata (segundo membro se contarmos com Luffy) a se juntar à tripulação de Piratas do Chapéu de Palha, Zoro aceitou o convite de Luffy após o capitão salvar sua vida.</p>
+                <p class="descricao">Primeiro pirata (segundo membro se contarmos com Luffy) a se juntar à tripulação de
+                    Piratas do Chapéu de Palha, Zoro aceitou o convite de Luffy após o capitão salvar sua vida.</p>
             </div>
         </div>
 
@@ -39,7 +44,10 @@
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Monkey D. Luffy</h2>
-                <p class="descricao">Luffy do Chapéu de Palha", como ficou conhecido, é o protagonista do anime, e o fundador e capitão da tripulação Piratas do Chapéu de Palha. Desde muito jovem, tem como seu maior sonho um dia encontrar o lendário tesouro de Gol D. Roger, para se tornar o novo Rei dos Piratas.</p>
+                <p class="descricao">Luffy do Chapéu de Palha", como ficou conhecido, é o protagonista do anime, e o
+                    fundador e capitão da tripulação Piratas do Chapéu de Palha. Desde muito jovem, tem como seu maior
+                    sonho um dia encontrar o lendário tesouro de Gol D. Roger, para se tornar o novo Rei dos Piratas.
+                </p>
             </div>
         </div>
 
@@ -48,7 +56,9 @@
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Nami</h2>
-                <p class="descricao">Uma órfã de guerra, ainda criança Nami foi adotada por Bell-mère, uma mulher da Marinha. Enquanto crescia ao lado de sua irmã adotiva Nojiko, Nami já demonstrava sua paixão por desenhar mapas, sonhando em um dia fazer o mapa de todo o mundo.</p>
+                <p class="descricao">Uma órfã de guerra, ainda criança Nami foi adotada por Bell-mère, uma mulher da
+                    Marinha. Enquanto crescia ao lado de sua irmã adotiva Nojiko, Nami já demonstrava sua paixão por
+                    desenhar mapas, sonhando em um dia fazer o mapa de todo o mundo.</p>
             </div>
         </div>
 
@@ -57,36 +67,41 @@
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Sanji</h2>
-                <p class="descricao">Também conhecido como "Perna Negra" Sanji, este pirata foi o quinto a integrar a tripulação de Luffy. Suas ações como pirata lhe renderam a terceira maior recompensa entre os membros do Chapéu de Palha, além de atuar como cozinheiro oficial do grupo.</p>
+                <p class="descricao">Também conhecido como "Perna Negra" Sanji, este pirata foi o quinto a integrar a
+                    tripulação de Luffy. Suas ações como pirata lhe renderam a terceira maior recompensa entre os
+                    membros do Chapéu de Palha, além de atuar como cozinheiro oficial do grupo.</p>
             </div>
         </div>
     </main>
     <ul class="botoes">
         <li>
-            <button class="botao">
+            <button class="botao" id="chopper">
                 <img src="imagens/tripulacao-chopper.png" alt="Tripulação Chopper">
             </button>
         </li>
         <li>
-            <button class="botao">
+            <button class="botao" id="zoro">
                 <img src="imagens/tripulacao-zoro.png" alt="Tripulação Zoro">
             </button>
         </li>
         <li>
-            <button class="botao selecionado">
+            <button class="botao selecionado" id="luffy">
                 <img src="imagens/tripulacao-luffy.png" alt="Tripulação Luffy">
             </button>
         </li>
         <li>
-            <button class="botao">
+            <button class="botao" id="nami">
                 <img src="imagens/tripulacao-nami.png" alt="Tripulação Nami">
             </button>
         </li>
         <li>
-            <button class="botao">
+            <button class="botao" id="sanji">
                 <img src="imagens/tripulacao-sanji.png" alt="Tripulação Sanji">
             </button>
         </li>
     </ul>
+
+    <script src="./js/index.js"></script>
 </body>
+
 </html>
